# colorbyte-api

./: .env.bmc.template  .env.example  .gitignore  BMC_INTEGRATION.md  CHANGES.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  README_REPLICATE_FREE.md  REPLICATE_FREE_TIER.md  TESTING_CHECKLIST.md  check_webhook_deliveries.py  check_webhooks.py  e2e_test_final.py  example_usage.py  main.py  migrate_to_bmc.py  migrate_to_paypal.py  pyproject.toml  render.yaml  test_bmc_webhook.py  test_database_authoritative_write.py  test_m2_routing.py  test_no_hf_fallback.py  test_production_webhook_secret.py  test_replicate_free.py  test_t246_poll_retry.py  test_webhook.py  test_webhook_with_meta.py  webhook_fix.py
.github/workflows/: abandoned-cart-poll.yml  canary-v0.yml  daily-metrics.yml  hf-spaces-audit.yml  keepalive.yml  mask-email-poll.yml  webhook-monitor.yml
app/: config.py  main.py
app/api/: __init__.py  admin.py  dashboard.py  download.py  inpaint.py  internal.py  metrics.py  payment.py  restore.py  tasks.py  upload.py
app/services/: abandoned_cart.py  ai_service.py  alert_email.py  dashboard.py  database.py  dodo_payments.py  error_messages.py  ga4_measurement.py  mask_email.py  paypal.py  storage.py  task_store.py
data/: artimagehub.db  colorbyte.db
docs/: founder-grant-access.md  hf-spaces-audit.json
scripts/: canary-v0.py  daily-metrics.py  dodo_order_truth.py  ga4-campaign-read.py  ga4-singapore-audit.py  geo-trend-report.py  hf-spaces-audit.py  webhook-monitor.py
tests/: test_task_persistence.py
(+2 files in other folders)
