[project]
name = "artimagehub-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.129.0",
    "gradio-client>=2.0.3",
    "httpx>=0.28.1",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.13.0",
    "psycopg[binary]>=3.2.10",
    "python-multipart>=0.0.22",
    "replicate>=1.0.7",
    "requests>=2.32.5",
    "Pillow>=10.0.0",
    "uvicorn>=0.40.0",
]
